app-scaler/kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-scaler
spec:
  selector:
    app: app-scaler
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 3086
    - protocol: TCP
      port: 443
      name: https
      targetPort: 443
