app-scaler/kubernetes/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: app-scaler.default.com
webhooks:
  - name: app-scaler.default.com
    clientConfig:
      service:
        name: app-scaler
        namespace: slack-bot
        path: "/api/v1/namespace"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURTakNDQWpJQ0NRRHk3WElXTkZjNW1EQU5CZ2txaGtpRzl3MEJBUXNGQURCbk1Rc3dDUVlEVlFRR0V3SkMKV1RFT01Bd0dBMVVFQ0F3RlRXbHVjMnN4RGpBTUJnTlZCQWNNQlUxcGJuTnJNUlV3RXdZRFZRUUtEQXh6Y0d4cApkRzFsZEhKcFkzTXhJVEFmQmdOVkJBTU1HR0Z3Y0MxelkyRnNaWEl1YzJ4aFkyc3RZbTkwTG5OMll6QWVGdzB5Ck1qRXdNRFF4T0RRek16SmFGdzB5TXpFd01EUXhPRFF6TXpKYU1HY3hDekFKQmdOVkJBWVRBa0paTVE0d0RBWUQKVlFRSURBVk5hVzV6YXpFT01Bd0dBMVVFQnd3RlRXbHVjMnN4RlRBVEJnTlZCQW9NREhOd2JHbDBiV1YwY21sagpjekVoTUI4R0Ex [...]
    rules:
      - operations: ["CREATE", "UPDATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["namespaces"]
    admissionReviewVersions: ["v1"]
    sideEffects: None
